--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=updater
 
 spring.kafka.bootstrap-servers=localhost:9092
-
 spring.kafka.consumer.group-id=payment_consumer
-
 spring.kafka.consumer.auto-offset-reset=earliest
-
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka-topic=payment
