--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.kafka.consumer.group-id=payment_consumer
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka-topic=payment
