--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 spring.application.name=updater
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/payment_stats
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=payment_consumer
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 kafka-topic=payment
+
+bank.biks-values=868688910,307204643,545573821,124515539,935213278
+okved.api-key=839ef22e048150154888726d7659ae68ee2ae01d
