--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=updater
 
+logging.level.root=debug
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
