--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=600s
+spring.cache.redis.cache-null-values=false
+
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/payment_stats
 spring.datasource.username=postgres
