--- a/updater/src/main/resources/application.properties
+++ b/updater/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka.topic.name=payment
+kafka.topic.partitions=1
+kafka.topic.replication-factor=1
