Добавил функциональность получения статистики по двум параметрам: TRANSFER( не внутрибансковские переводы клиента) и PAYMENT ( платежи клиента, оплата чего-либо)                               Так же добавил этот сервис в докер контейнер

--- a/stats/src/main/resources/application.properties
+++ b/stats/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=stats
 server.port=6060
 
 logging.level.root=info
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
