--- a/stats/src/main/resources/application.properties
+++ b/stats/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=stats
+server.port=6060
+
+logging.level.root=info
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/payment_stats
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
