--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.18.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-jpa</artifactId>
+                <classifier>jakarta</classifier>
+                <version>5.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
